--- a/README.adoc
+++ b/README.adoc
@@ -16,6 +16,7 @@ ifdef::env-github[]
 endif::[]
 
 
-Outil de check pré/post vol.
+Outil de check pré/post vol. 
+La version en ligne est disponible ici : https://bit.ly/paranote.
 
-NOTE: Sur une idée originale et une link:files/carnetA4.pdf[fiche existante] de {seb}.
+NOTE: Sur une idée originale et une link:files/carnetA4.pdf[fiche existante] de {seb}. Et avec l'aide des étudiants suivants : https://github.com/enzofrnt[Enzo], ...
