--- a/README.adoc
+++ b/README.adoc
@@ -1,28 +1,34 @@
-// ------------------------------------------
-//  Created by Jean-Michel Bruel on 2025-01.
-//  Copyright (c) 2025 IRIT/U. Toulouse. All rights reserved.
-// ------------------------------------------
-= Paranote image:https://img.shields.io/badge/Contribute-here-blue[link="https://github.com/jmbruel/paranote"]
-Jean-Michel Bruel (jean-michel.bruel@univ-tlse2.fr)
+= Paranote 
 v2025.1, {localdate}
 :icons: font
 :seb: mailto:s.richard@ffvl.fr[Sébastien Richard]
+:toc: macro
+:toclevels: 3
+:sectanchors:
 
+== Sommaire :
 
-//---------------------------------------- Badges --------------------------------------
-image:https://app.codacy.com/project/badge/Grade/31829078ea6246e1af7a8cce734fa2a6["Codacy code quality", link="https://app.codacy.com/gh/jmbruel/paranote/dashboard?utm_source=gh&utm_medium=referral&utm_content=&utm_campaign=Badge_grade"]
-//---------------------------------------- Badges --------------------------------------
+toc::[]
 
-ifdef::env-github[]
-:tip-caption: :bulb:
-:note-caption: :information_source:
-:important-caption: :heavy_exclamation_mark:
-:caution-caption: :fire:
-:warning-caption: :warning:
-endif::[]
+== Equipe :
 
+Projet réalisé par::
 
+- link:https://github.com/adriang0309[GUERRERO Adrian] -- Scrum Master / Développeur
+- link:https://github.com/Smogita[CRISTINI Aidan] -- Product Owner / Développeur
+- link:https://github.com/YolanBrun[BRUN Yolan] --  Développeur
+- link:https://github.com/leonardo-correiamendes[CORREIA MENDES Leonardo] -- Développeur
+- link:https://github.com/Diego-PB[PENICAUD-BERNAL Diego] -- Développeur
+- link:https://github.com/Marwane-Ibrahim[IBRAHIM Marwane] -- Développeur
+
+NOTE: Sur une idée originale et une link:files/carnetA4.pdf[fiche existante] de {seb}. Et avec l'aide des étudiants suivants avant SAE : https://github.com/enzofrnt[Enzo], ...
+
+== Client
+
+Jean-Michel Bruel (jean-michel.bruel@univ-tlse2.fr)
+
+== Version en ligne
 Outil de check pré/post vol. 
 La version en ligne est disponible ici : https://bit.ly/paranote.
 
-NOTE: Sur une idée originale et une link:files/carnetA4.pdf[fiche existante] de {seb}. Et avec l'aide des étudiants suivants : https://github.com/enzofrnt[Enzo], ...
+
