--- a/README.adoc
+++ b/README.adoc
@@ -15,11 +15,11 @@ toc::[]
 Projet réalisé par::
 
 - link:https://github.com/leonardo-correiamendes[CORREIA MENDES Leonardo] -- Scrum Master / Développeur
-- link:https://github.com/adriang0309[GUERRERO Adrian] -- Développeur
-- link:https://github.com/Smogita[CRISTINI Aidan] -- Product Owner / Développeur
+- link:https://github.com/Smogita[CRISTINI Aidan] -- Git Master / Product Owner / Développeur
 - link:https://github.com/YolanBrun[BRUN Yolan] --  Développeur
 - link:https://github.com/Diego-PB[PENICAUD-BERNAL Diego] -- Développeur
-- link:https://github.com/Marwane-Ibrahim[IBRAHIM Marwane] -- Développeur
+- link:https://github.com/marwane-ibrahim[IBRAHIM Marwane] -- Développeur
+- link:https://github.com/adrian-guerrero[GUERRERO Adrian] -- Développeur
 
 NOTE: Sur une idée originale et une link:files/carnetA4.pdf[fiche existante] de {seb}. Et avec l'aide des étudiants suivants avant SAE : https://github.com/enzofrnt[Enzo], ...
 
