--- a/Documentations/Documentation_Utilisateur.adoc
+++ b/Documentations/Documentation_Utilisateur.adoc
@@ -2,7 +2,7 @@
 
 = Documentation Utilisateur sprint n°0 SAE-5.01-ParaCheck
 
-image::../../images/Document_util1.png[align="center", width=100%]
+image::../img/Paracheck_logo.png[align="center", width=100%]
 
 == Sommaire
 toc::[]
