--- a/README.adoc
+++ b/README.adoc
@@ -6,6 +6,8 @@ v2025.1, {localdate}
 :toclevels: 3
 :sectanchors:
 
+image::../img/Paracheck_logo.png[align="center", width=50%]
+
 == Sommaire :
 
 toc::[]
