--- a/README.adoc
+++ b/README.adoc
@@ -40,3 +40,7 @@ Jean-Michel Bruel (jean-michel.bruel@univ-tlse2.fr / jbruel@gmail.com)
 
 Outil de check pré/post vol. 
 La version en ligne est disponible ici : https://bit.ly/paranote.
+
+== Lien pratiques 
+
+Google Docs de l'équipe : https://docs.google.com/document/d/19lxhQWtVl5iOjcGk5RDnDcPW6BB6JSTkVWcardjvxzM/edit?usp=sharing
