--- a/Documentations/Sprint_2/documentation_technique_v2.adoc
+++ b/Documentations/Sprint_2/documentation_technique_v2.adoc
@@ -2,7 +2,7 @@
 
 = Documentation Technique sprint n°0 SAE-5.01-ParaCheck
 
-image::../img/Paracheck_logo.png[align="center", width=100%]
+image::../../img/Paracheck_logo.png[align="center", width=100%]
 
 
 == Sommaire
