Update link for Sprint 0 release in README

--- a/README.adoc
+++ b/README.adoc
@@ -56,7 +56,7 @@ La version en ligne est disponible ici : https://bit.ly/paranote.
 | Sem. 36 ( 01/09/25 - 05/09/25 )  | Sprint 0 | Sprint 0 | https://github.com/users/Diego-PB/projects/5[Sprint 0] | Sprint 0, avec User Story et tâches associées
 |   | Sprint 0 | Documentation Utilisateur | https://github.com/Diego-PB/ParaCheck/blob/main/Documentations/Sprint_0/documentation_utilisateur_v0.adoc[Documentation Utilisateur] | Installation et présentation du projet avec ses fonctionnalités
 |   | Sprint 0 | Documentation Technique | https://github.com/Diego-PB/ParaCheck/blob/main/Documentations/Sprint_0/documentation_technique_v0.adoc[Documentation Technique] | Fonctionnement et fichiers clés du projet
-|   | Sprint 0 | Release de fin de Sprint 0 | [Release de fin de Sprint 1] | Release de fin de Sprint 0
+|   | Sprint 0 | Release de fin de Sprint 0 | https://github.com/Diego-PB/ParaCheck/releases/tag/V0[Release de fin de Sprint 0] | Release de fin de Sprint 0
 |   | Sprint 0 | Prévision Sprint 1 | https://github.com/users/Diego-PB/projects/6[Prévision Sprint 1] | Prévision du prochain Sprint (1)
 | Sem. 37-38 ( 08/09/25 - 19/09/25 ) | Sprint 1 | Sprint 1 | https://github.com/users/Diego-PB/projects/6[Sprint 1] | Sprint 1, avec User Story et tâches associées
 |   | Sprint 1 | Cahier de tests | [Cahier de tests] | Cahiers de tests
