--- a/README.adoc
+++ b/README.adoc
@@ -52,7 +52,8 @@ La version en ligne est disponible ici : https://bit.ly/paranote.
 | Date  | Version  | Nom              | Lien | Description
 |   |   | Sujet SAE    | https://webetud.iut-blagnac.fr/pluginfile.php/61576/mod_resource/content/1/SAES5.01_Support.pdf[Sujet SAE] | Sujet de la SAE, à retrouver sur Webetud
 |   |   | Backlog Produit Global | https://github.com/users/Diego-PB/projects/4/[Backlog Produit] | Backlog Produit Global
-|   |   | Google Docs de l'équipe | https://docs.google.com/document/d/19lxhQWtVl5iOjcGk5RDnDcPW6BB6JSTkVWcardjvxzM/edit?usp=sharing[Google Docs] | Google Docs de l'équipe
+|   |   | Guide d'installation | https://github.com/Diego-PB/ParaCheck/blob/main/Documentations/guide_installation.adoc[Guide d'installation] | Guide d'installation
+|   |   | Sujet SAE    | https://webetud.iut-blagnac.fr/pluginfile.php/61576/mod_resource/content/1/SAES5.01_Support.pdf[Sujet SAE] | Sujet de la SAE, à retrouver sur Webetud
 | Sem. 36 ( 01/09/25 - 05/09/25 )  | Sprint 0 | Sprint 0 | https://github.com/users/Diego-PB/projects/5[Sprint 0] | Sprint 0, avec User Story et tâches associées
 |   | Sprint 0 | Documentation Utilisateur | https://github.com/Diego-PB/ParaCheck/blob/main/Documentations/Sprint_0/documentation_utilisateur_v0.adoc[Documentation Utilisateur] | Installation et présentation du projet avec ses fonctionnalités
 |   | Sprint 0 | Documentation Technique | https://github.com/Diego-PB/ParaCheck/blob/main/Documentations/Sprint_0/documentation_technique_v0.adoc[Documentation Technique] | Fonctionnement et fichiers clés du projet
